# email-assistant-ambient-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  langgraph.json  main.py  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  store.pckl
src/email_assistant/db/: db.py  db_test.py
src/email_assistant/graphs/: cron.py  main_graph.py
src/email_assistant/graphs/nodes/: interrupt_handler.py  llm_call.py  mark_as_read.py  triage_interrupt_handler.py  triage_router.py
src/email_assistant/graphs/routers/: should_continue.py
src/email_assistant/graphs/states/: state.py
src/email_assistant/memory/: memory.py
src/email_assistant/models/: llm.py
src/email_assistant/prompts/: prompts.py
src/email_assistant/tools/: base.py
src/email_assistant/tools/gmail/: README-Gmail-Integration-Tools.md  run_ingest.py  setup_cron.py  setup_gmail.py
src/email_assistant/utils/: formatter.py
