[project]
name = "email-assistant-ambient-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.196.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "html2text>=2025.4.15",
    "langchain>=1.3.0",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "langgraph-cli[inmem]>=0.4.26",
    "langsmith[pytest]>=0.8.3",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "pyppeteer>=2.0.0",
    "pytest>=9.0.3",
    "pytest-xdist>=3.8.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
]
